--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.9",
+    "bulma": "^0.7.5",
+    "classnames": "^2.2.6",
     "downshift": "^3.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -39,6 +42,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/uuid": "^3.4.5",
+    "node-sass": "^4.12.0",
     "typescript": "^3.6.2"
   }
 }
