--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^4.4.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
+    "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
     "node-sass": "^4.12.0",
     "typescript": "^3.6.2"
