--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "downshift": "^3.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-map-gl": "^5.0.11",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
@@ -41,6 +42,7 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-map-gl": "^5.0.1",
     "@types/react-redux": "^7.1.2",
     "@types/styled-components": "^4.1.19",
     "@types/uuid": "^3.4.5",
