--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma": "^0.7.5",
     "classnames": "^2.2.6",
     "downshift": "^3.3.1",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-map-gl": "^5.0.11",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.7",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
